tests/codegen/fail/union/enum_no_fields.rs
use coasys_juniper::GraphQLUnion;

#[derive(GraphQLUnion)]
enum Character {}

fn main() {}
